--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "tap-spec": "^5.0.0",
-    "tape": "^5.0.1"
+    "tape": "^5.0.1",
+    "trim": ">=0.0.3"
   },
   "scripts": {
     "challenge:all": "node challenges/*/index.test.js | tap-spec",
